--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,13 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.3.0"
+    def room_version = "2.2.5"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     def fragment_version = "1.2.5"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -36,5 +39,17 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'org.jsoup:jsoup:1.13.1'
-    compile 'com.android.volley:volley:1.2.0'
+    implementation 'com.android.volley:volley:1.2.0'
+    //Viewmodel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+
+    //livedata
+    implementation "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
