--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    implementation 'org.twitter4j:twitter4j-core:4.0.6'
 }
